--- a/multipleimagepicker/src/main/AndroidManifest.xml
+++ b/multipleimagepicker/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:label="@string/app_name" >
         <activity
-            android:name=".MultipleImagePicker"
+            android:name=".MultipleImagePickerActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
